--- a/.github/workflows/workflow_manufacturing.yml
+++ b/.github/workflows/workflow_manufacturing.yml
@@ -125,6 +125,9 @@ jobs:
         {
           "name": "WF_ADB",
           "format": "MULTI_TASK",
+            "run_as": {
+              "user_name": "cfernandez@carlosfernandez1996outlook.onmicrosoft.com"
+              },
           "tasks": [
             {
               "task_key": "00_bronze_ingest_catalogs",
