--- a/.github/workflows/workflow_manufacturing.yml
+++ b/.github/workflows/workflow_manufacturing.yml
@@ -120,7 +120,7 @@ jobs:
         
         echo "Creando workflow: WF_ADB con cluster existente ID: $CLUSTER_ID"
         
-        # Crear el JSON del workflow usando cluster existente
+        # Crear el JSON del workflow usando cluster existent
         cat > workflow_config.json << EOF
         {
           "name": "WF_ADB",
